<resources>
    <string name="app_name">CheryPizza</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ФИО</string>
    <string name="nav_header_subtitle">Номер телефона</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Меню</string>
    <string name="menu_promotions">Акции</string>
    <string name="menu_coupons">Купоны</string>
    <string name="menu_basket">Корзина</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_personal">Личный кабинет</string>
    <string name="btn_tel">Telegram</string>
    <string name="btn_vk">VK</string>
    <string name="btn_web">Web</string>
    <string name="tele_help">Телефон поддержки:</string>
    <string name="number">+7912819436</string>


    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="couponsText">Введите купон:</string>
    <string name="couponsMy">Мои купоны:</string>
    <string name="couponsB">Активировать</string>

    <string name="Non1">sad</string>
    <string name="Non2">sad</string>
    <string name="Non3">dd</string>
    <string name="title_activity_login">Вход и регистрация</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_register">Регистрация</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_basket">Корзина</string>

    <string name="pizza1">Карбонара</string>
    <string name="pizza2">Сырная</string>
    <string name="pizza3">Четыре сезона</string>
    <string name="pizza4">Пепперони Фреш</string>
    <string name="pizza5">Ветчина и грибы</string>

    <string name="end">Итого, без учёта доставки: </string>
    <string name="end_zakaz">Итого: </string>
    <string name="oformit">Оформить</string>

    <string name="zakaz">Оформление заказа</string>
    <string name="dostavka">Способ доставки:</string>
    <string name="oplata">Способ оплаты:</string>
    <string name="cupon">Выберите купон:</string>
    <string name="address">Адрес доставки</string>
    <string name="time">Время доставки/приготовления</string>

    <string name="promo1Text1"> "<big><b>Скидка при регистрации!</b></big> \n При регистрации в приложении вы получаете скидку 10% \n
Воспользоваться данным предложением можно только один раз при оформлении первого заказа. \n Подробное описание действий: \n
1. Скачать мобильное приложение. \n
2. Зарегистрироваться и зайти в личный кабинет. \n
3. Добавить товары в корзину. \n
4. Применить скидочный купон. \n
5. Оформить заказ."</string>

    <string name="promo2Text1"> "<big><b>Скидка 15% в июле!</b></big> \n Акция действует на "Пепперони Фреш". \n
Воспользоваться этим предложением при заказе данной пиццы можно в течении всего июля. \n Подробное описание действий: \n
1. Добавьте необходимое количество пиццы в корзину. \n
2. Акция автоматически применится к товару. \n
3. Оформите и оплатите заказ."</string>

</resources>