<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.study.pizzaapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.study.pizzaapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.study.pizzaapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_cupons"
        android:name="com.study.pizzaapp.cupons"
        android:label="@string/menu_coupons"
        tools:layout="@layout/fragment_cupons" />
    <fragment
        android:id="@+id/nav_promotions"
        android:name="com.study.pizzaapp.promotions"
        android:label="@string/menu_promotions"
        tools:layout="@layout/fragment_promotions" />
    <fragment
        android:id="@+id/nav_basket"
        android:name="com.study.pizzaapp.basket"
        android:label="@string/menu_basket"
        tools:layout="@layout/fragment_basket" />
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.study.pizzaapp.contacts"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_personal"
        android:name="com.study.pizzaapp.personal"
        android:label="@string/menu_personal"
        tools:layout="@layout/fragment_personal" />
</navigation>