<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZakazActivity">

    <Button
        android:id="@+id/try_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="5sp"
        android:layout_marginTop="9sp"
        android:layout_marginBottom="48dp"
        android:onClick="try_btn"
        android:text="Button" />

    <TextView
        android:id="@+id/dostavka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/montserrat"
        android:text="@string/dostavka"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="35sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:layout_below="@id/dostavka"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="10sp"
        android:background="@color/colorBtn" />


    <TextView
        android:id="@+id/oplata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dostavka"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="25sp"
        android:fontFamily="@font/montserrat"
        android:text="@string/oplata"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dostavka"
        android:layout_alignParentRight="true"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="29sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:layout_below="@id/oplata"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="10sp"
        android:background="@color/colorBtn" />

    <TextView
        android:id="@+id/cupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oplata"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="25sp"
        android:fontFamily="@font/montserrat"
        android:text="@string/cupon"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/oplata"
        android:layout_alignParentRight="true"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="29sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:layout_below="@id/cupon"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="10sp"
        android:background="@color/colorBtn" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cupon"
        android:layout_marginHorizontal="6sp"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/colorBtn"
        android:ems="15"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:paddingLeft="25sp" />

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_marginHorizontal="6sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/colorBtn"
        android:ems="15"
        android:hint="@string/time"
        android:inputType="datetime"
        android:paddingLeft="25sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:background="@color/colorBtn"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="500sp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/end_zakaz"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_below="@id/view"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20sp"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/btn_oformit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="5sp"
        android:layout_marginTop="9sp"
        android:onClick="OnOformitClick"
        android:text="@string/oformit" />



</RelativeLayout>