<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pizza1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasketActivity">

    <TextView
        android:id="@+id/pizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza1"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30sp"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btn_min1"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25sp"
        android:layout_marginRight="10sp"
        android:onClick="OnBthClick2"


        android:text="+" />

    <Button
        android:id="@+id/btn_plus1"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25sp"
        android:layout_marginRight="120sp"
        android:onClick="OnBthClick1"

        android:text="-" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25sp"
        android:layout_marginRight="60sp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center" />

    <View
        android:layout_width="match_parent"
        android:layout_below="@id/pizza"
        android:layout_height="1sp"
        android:background="@color/colorBtn"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp" />

    <TextView
        android:id="@+id/pizza2"
        android:layout_below="@id/pizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza2"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="30sp"
        android:textColor="@color/colorText"
        android:textSize="20sp"
       />


    <Button
        android:id="@+id/btn_min2"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_below="@id/pizza"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="10sp"
        android:onClick="OnBthClick4"

        android:text="+" />

    <Button
        android:id="@+id/btn_plus2"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_below="@id/pizza"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="120sp"
        android:onClick="OnBthClick3"
        android:text="-" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="60sp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:layout_below="@id/pizza"/>

    <View
        android:layout_width="match_parent"
        android:layout_below="@id/pizza2"
        android:layout_height="1sp"
        android:background="@color/colorBtn"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp" />

    <TextView
        android:id="@+id/pizza3"
        android:layout_below="@id/pizza2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza3"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="30sp"
        android:textColor="@color/colorText"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_min3"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_below="@id/pizza2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="10sp"
        android:onClick="OnBthClick6"

        android:text="+" />

    <Button
        android:id="@+id/btn_plus3"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_below="@id/pizza2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="120sp"
        android:onClick="OnBthClick5"
        android:text="-" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="60sp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:layout_below="@id/pizza2"/>

    <View
        android:layout_width="match_parent"
        android:layout_below="@id/pizza3"
        android:layout_height="1sp"
        android:background="@color/colorBtn"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp" />

    <TextView
        android:id="@+id/pizza4"
        android:layout_below="@id/pizza3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza4"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="30sp"
        android:textColor="@color/colorText"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_min4"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_below="@id/pizza3"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="10sp"
        android:onClick="OnBthClick8"

        android:text="+" />

    <Button
        android:id="@+id/btn_plus4"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_below="@id/pizza3"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="120sp"
        android:onClick="OnBthClick7"
        android:text="-" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="60sp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:layout_below="@id/pizza3"/>

    <View
        android:layout_width="match_parent"
        android:layout_below="@id/pizza4"
        android:layout_height="1sp"
        android:background="@color/colorBtn"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp" />

    <TextView
        android:id="@+id/pizza5"
        android:layout_below="@id/pizza4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza5"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="30sp"
        android:textColor="@color/colorText"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_min5"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_below="@id/pizza4"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="10sp"
        android:onClick="OnBthClick10"

        android:text="+" />

    <Button
        android:id="@+id/btn_plus5"
        android:layout_width="37sp"
        android:layout_height="40sp"
        android:layout_below="@id/pizza4"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="120sp"
        android:onClick="OnBthClick9"
        android:text="-" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="50sp"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9sp"
        android:layout_marginRight="60sp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:layout_below="@id/pizza4"/>


    <View
        android:layout_width="match_parent"
        android:layout_below="@id/pizza5"
        android:layout_height="1sp"
        android:background="@color/colorBtn"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:background="@color/colorBtn"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="500sp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/end"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="0"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_below="@id/view"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20sp"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/btn_oformit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="5sp"
        android:layout_marginTop="9sp"
        android:onClick="OnOformitClick"

        android:text="@string/oformit" />


</RelativeLayout>